ingress/ingress-name-based-hosting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name-based
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
    - host: bar.foo.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
