ingress/resource-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-backend-ingress
spec:
  defaultBackend:
    resource:
      kind: StorageBucket
      name: static-assets
      apiGroup: k8s.example.com

  rules:
    - http:
        - paths:
            - path: /icons
              pathType: ImplementationSpecific
              backend:
                resource:
                  apiGroup: k8s.example.com
                  kind: StorageBucket
                  name: icon-assets
