ingress/wildcard-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-host-ingress
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/bar"
            pathType: Prefix
            backend:
              service:
                name: service-1
                port:
                  number: 80
    - host: "*.foo.com"
      http:
        paths:
          - path: "/foo"
            pathType: Prefix
            backend:
              service:
                name: service-2
                port:
                  number: 80
